--- a/schedule.css
+++ b/schedule.css
@@ -10,4 +10,23 @@ th {
 td {
     width: 200px;
     border: solid 1px palevioletred;
+    text-align: center;
+}
+
+h1 {
+    text-align: center;
+    margin: 5px;
+}
+
+h3 {
+    text-align: right;
+    margin: 0%;
+    color: blue;
+}
+
+h5 {
+    text-align: right;
+    margin: 0%;
+
+
 }
