--- a/schedule.css
+++ b/schedule.css
@@ -12,7 +12,7 @@ td {
     width: 200px;
     border: solid 1px palevioletred;
     text-align: center;
-    height: 100px;
+    height: 10px;
 }
 
 h1 {
@@ -29,6 +29,12 @@ h3 {
 h5 {
     text-align: right;
     margin: 0%;
+}
 
+div {
+    text-align: center;
+}
 
+img {
+    width: 250px;
 }
