박훈명 - css 조금 수정

--- a/schedule.css
+++ b/schedule.css
@@ -39,3 +39,12 @@ img {
     width: 230px;
     height: 200px;
 }
+
+.JV {
+    background-color: antiquewhite;
+    color: green;
+}
+
+th {
+    background-color:bisque;
+}
