--- a/schedule.css
+++ b/schedule.css
@@ -20,6 +20,17 @@ h1 {
     margin: 5px;
 }
 
+a {
+    display: block;
+    text-align: center;
+}
+
+.logo {
+    width: 300px;
+    text-align: center;
+    margin: 0%;
+}
+
 h3 {
     text-align: right;
     margin: 0%;
